<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presenters.main.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_footer_main"
        android:elevation="20dp"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layoutHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIconHome"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-18dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/baseline_circle_24"
                app:tint="@color/bg_main" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivHome"
                android:layout_width="@dimen/size_icon_menu_main"
                android:layout_height="@dimen/size_icon_menu_main"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_icon_menu_main"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_home"
                app:tint="@color/color_menu_disable" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_text_menu_main"
                android:text="@string/title_home_menu"
                android:textColor="@color/color_menu_disable"
                android:textSize="@dimen/text_size_text_menu_main" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutExplore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIconExplore"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-18dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/baseline_circle_24"
                app:tint="@color/bg_main" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivExplore"
                android:layout_width="@dimen/size_icon_menu_main"
                android:layout_height="@dimen/size_icon_menu_main"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_icon_menu_main"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_explore_main"
                app:tint="#99434343" />

            <TextView
                android:id="@+id/tvExplore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_text_menu_main"
                android:text="@string/title_explore_menu"
                android:textColor="#99434343"
                android:textSize="@dimen/text_size_text_menu_main" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFavorite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIconFavorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-18dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/baseline_circle_24"
                app:tint="@color/bg_main" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFavorite"
                android:layout_width="@dimen/size_icon_menu_main"
                android:layout_height="@dimen/size_icon_menu_main"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_icon_menu_main"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_favorite_main"
                app:tint="#99434343" />

            <TextView
                android:id="@+id/tvFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_text_menu_main"
                android:text="@string/title_favorite_menu"
                android:textColor="#99434343"
                android:textSize="@dimen/text_size_text_menu_main" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutChat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIconChat"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-18dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/baseline_circle_24"
                app:tint="@color/bg_main" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivChat"
                android:layout_width="@dimen/size_icon_menu_main"
                android:layout_height="@dimen/size_icon_menu_main"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_icon_menu_main"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_chat_main"
                app:tint="#99434343" />

            <TextView
                android:id="@+id/tvChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_text_menu_main"
                android:text="@string/title_chat_menu"
                android:textColor="#99434343"
                android:textSize="@dimen/text_size_text_menu_main" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAccount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIconAccount"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-18dp"
                android:visibility="visible"
                app:srcCompat="@drawable/baseline_circle_24"
                app:tint="@color/bg_main" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAccount"
                android:layout_width="@dimen/size_icon_menu_main"
                android:layout_height="@dimen/size_icon_menu_main"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_icon_menu_main"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_profile_main"
                app:tint="@color/bg_main" />

            <TextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_text_menu_main"
                android:text="@string/title_account_menu"
                android:textColor="@color/bg_main"
                android:textSize="@dimen/text_size_text_menu_main" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <edu.re.estate.widgets.FloatingChatBotView
        android:id="@+id/chatBotView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>